<resources>
    <string name="app_name">AppFinal</string>
    <string name="usuario">Usuario</string>
    <string name="contrasenia">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="title_activity_usuario">UsuarioActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="cuenta">Cuenta</string>
    <string name="perfil">Perfil</string>
    <string name="pedidos">Pedidos</string>
    <string name="opciones">Opciones</string>
    <string name="administracion">Administración</string>
</resources>
