<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/perfil" />
        <item
            android:id="@+id/nav_pedido"
            android:icon="@drawable/ic_pedido"
            android:title="@string/pedidos" />
        <item
            android:id="@+id/nav_admin"
            android:icon="@drawable/ic_admin"
            android:title="@string/administracion" />
        <item
            android:id="@+id/nav_tool"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/opciones" />
    </group>

</menu>
