<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="calatayud.pablo.appfinal.MainActivity"
    tools:layout_editor_absoluteX="0dp">

 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="208dp"
     android:orientation="vertical">

  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="121dp"
      android:layout_marginTop="80dp"
      android:background="@drawable/logo" />


 </LinearLayout>

 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">

  <EditText
      android:id="@+id/usuario"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/usuario"
      android:layout_gravity="center_horizontal"
      android:layout_marginLeft="5dp"
      android:layout_marginRight="5dp"
      android:layout_marginTop="30dp"/>


  <EditText
      android:id="@+id/pass"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/contrasenia"
      android:layout_gravity="center_horizontal"
      android:layout_marginLeft="5dp"
      android:layout_marginRight="5dp"
      android:layout_marginBottom="10dp"/>

  <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/entrar"
      android:background="#ff0004"
      android:textSize="20dp"
      android:layout_marginLeft="5dp"
      android:layout_marginRight="5dp"
      android:textColor="#ffffff"
      android:onClick="acceder"/>



 </LinearLayout>

</LinearLayout>

